<?xml version="1.0"?>
<package format="2">
  <name>ORB_SLAM2</name>
  <version>0.0.1</version>
  <description>The ORB_SLAM2 package</description>
   <maintainer email="ruan-x@todo.todo">ruan-x</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>  <!-- Add pcl_ros dependency for ROS integration -->
  <build_depend>pcl_conversions</build_depend>  <!-- Add pcl_conversions if needed -->
  <build_depend>visualization_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_ros</exec_depend>  <!-- Add pcl_ros dependency for ROS integration -->
  <exec_depend>pcl_conversions</exec_depend>  <!-- Add pcl_conversions if needed -->
  <exec_depend>visualization_msgs</exec_depend>
</package>
